finalização dos exercicios

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "0.17.1",
+    "moment": "2.20.1",
     "telegraf": "3.17.3"
   },
   "devDependencies": {
