--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,6 @@ const token = ''
 module.exports = {
   token,
   id: '123',
-  apiUrl: `https://api.telegram.org/..file/bot${token}`
+  apiUrl: `https://api.telegram.org/bot${token}`,
   apiFileUrl: `https://api.telegram.org/file/bot${token}`
 }
