--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,8 @@
   "dependencies": {
     "axios": "0.17.1",
     "moment": "2.20.1",
+    "mongoose": "^5.6.10",
+    "nodemon": "^1.19.1",
     "telegraf": "3.17.3"
   },
   "devDependencies": {
