--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "0.17.1",
+    "axios": "^0.19.0",
     "moment": "2.20.1",
     "mongoose": "^5.6.10",
     "nodemon": "^1.19.1",
