--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "moment": "2.20.1",
     "mongoose": "^5.6.10",
+    "node-schedule": "1.3.0",
     "nodemon": "^1.19.1",
     "telegraf": "3.17.3"
   },
